--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,13 +60,21 @@
     <Compile Include="Assets\Scripts\GameManagement\MenuNiveles.cs" />
     <Compile Include="Assets\Scripts\GameManagement\ContadorGlobal.cs" />
     <Compile Include="Assets\Scripts\GameManagement\Nivel.cs" />
+    <Compile Include="Assets\Scripts\Pickup.cs" />
+    <Compile Include="Assets\Scripts\GameManagement\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\TriggerActivador.cs" />
+    <Compile Include="Assets\Scripts\MainMenu\AudioSettingsUI.cs" />
     <Compile Include="Assets\Scripts\GameManagement\FPSLimiter.cs" />
     <Compile Include="Assets\Scripts\MainMenu\MainMenuManagement.cs" />
     <Compile Include="Assets\Scripts\GameManagement\SelectLevelToPlay.cs" />
+    <Compile Include="Assets\Scripts\GameManagement\MusicManager.cs" />
     <Compile Include="Assets\Scripts\PlataformaMovil.cs" />
     <Compile Include="Assets\Scripts\Player\PauseGame.cs" />
+    <Compile Include="Assets\Scripts\GameManagement\PauseVolume.cs" />
+    <Compile Include="Assets\Scripts\ElementoVisible.cs" />
+    <Compile Include="Assets\Scripts\Monedas\Moneda.cs" />
+    <Compile Include="Assets\Scripts\Monedas\GestionDeNiveles.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
